# mem-dc-redis

./: .env.example  LICENSE  Procfile  README.md  api-spec.yaml  app.json  openapi.yaml  pyproject.toml  requirements.txt  start-api.sh  test.py
app/: api.py  config.py  main.py  schemas.py
app/services/: __init__.py  datacloud_service.py  redis_memory_service.py
app/utils/: __init__.py  redis_client.py  sf_auth_client.py
app/vector_store/: __init__.py  memory_store.py
